# dacstore

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  poster-plots.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  data.yaml  deploy.yaml  fetch.yaml
dacstore/: Pandas_DE.py  config.py  dac.ipynb  dac_analysis.py  dac_config.py  data.csv  main.py  model.py  plot.py  poster-plots.ipynb  utils.py  validation.py
data/: data.csv  data_bilendi.csv  group_averages.csv  numeric_data.csv
docs/: _config.yml  _toc.yml  intro.md  main_model_paper2.py  model.ipynb  model_paper2.ipynb  model_paper2.py  requirements.txt
results/: _config.yml  _toc.yml  model.ipynb
results/e1_no_incomplete/: data_bilendi_filtered.csv  vif_results.xlsx
results/e1_no_incomplete/co2_storage/: ols_co2_storage_full_summary.txt  ols_co2_storage_summary.xlsx
results/e1_no_incomplete/dac/: ols_dac_full_summary.txt  ols_dac_summary.xlsx
results/e2_no_speeding/: data_bilendi_filtered.csv  vif_results.xlsx
results/e2_no_speeding/co2_storage/: ols_co2_storage_full_summary.txt  ols_co2_storage_summary.xlsx
results/e2_no_speeding/dac/: ols_dac_full_summary.txt  ols_dac_summary.xlsx
results/e3_no_straightlining/: data_bilendi_filtered.csv  vif_results.xlsx
results/e3_no_straightlining/co2_storage/: ols_co2_storage_full_summary.txt  ols_co2_storage_summary.xlsx
results/e4_no_attention/: data_bilendi_filtered.csv  vif_results.xlsx
scripts/: create-likert-plots.py  create-models.py  create-numeric-data.py  create-plots.py  fetch.py  poster-plots.ipynb
(+6 files in other folders)
